2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-02-01  Cedric Bail

	* Improve scalability and raw speed of Chained Mempool.

2011-02-08  Tom Hacohen

	* Added eina_unicode_strndup

2011-02-16  Mike Blumenkrantz

        * Added EINA_INLIST_FOREACH_SAFE

2011-02-16  Tom Hacohen

	* Added eina_unicode_utf8* functions for utf8 string handling
	and conversions to and from Eina_Unicode

2011-02-17  Mike Blumenkrantz

        * Added eina_list_move* functions for moving list node data to other lists

2011-02-24  Vincent Torri

        * Fix a compilation failure when --disable-posix-threads
	--disable-valgrind are passed to configure

2011-03-09  Cedric Bail

	* Fix stat failure when file size in bytes or the number of blocks
	allocated to the file or the file serial number didn't fit in 32bits.

2011-03-18  Mike Blumenkrantz

        * Use stringshare for eina_error messages
        * add eina_error_find to match an error message with its Eina_Error

2011-04-06  Gustavo Sverzut Barbieri

	* Add Simple XML parser API.

2011-04-11  Cedric Bail

	* Add eina_inlist_sort.
	* Add eina_mempool_repack.
	* Add Eina_Object API.

2011-04-13  Cedric Bail & Vincent Torri

	* Add Eina_File API.

2011-04-22  Vincent Torri

        * Add Eina_Lock API

2011-04-24  Carsten Haitzler (The Rasterman)

        * Add a prefix location finder api to eina. Beta status. needs
        more use from higher up libs/apps first.
